test/tooltest/effectgen/invalid/23_unmatched_brace.params
/*
 * Invalid: Unmatched opening brace in attribute
 */

struct [[ge::params(type=TEST_UNMATCHED_BRACE, name="TestUnmatchedBrace", data={a: 1, b: 2) ]] TestUnmatchedBraceParams {
    float value1;
    int value2;
};
